# rust-http-server

./: .gitignore  README.md
docs/: Final Project Write-up.md  concurrency.md  log_plan.md  refactor.md  shut_down.md
server/: Cargo.toml
server/src/: init.rs  main.rs  serve.rs  signal.rs  statics.rs  telemetry.rs
