[package]
name = "http-server"
version = "0.1.0"
edition = "2024"

[dependencies]
nix = { version = "0.29.0", features = [
    "fs",
    "net",
    "poll",
    "signal",
    "socket",
] }
log = "0.4.27"
opentelemetry = "0.29.1"
opentelemetry-appender-log = "0.29.0"
opentelemetry-stdout = "0.29.0"
opentelemetry_sdk = "0.29.0"
crossbeam-channel = "0.5.15"
